--- a/src/blocks/jetpack/contact-form.scss
+++ b/src/blocks/jetpack/contact-form.scss
@@ -1,4 +1,4 @@
-/* Icon Block
+/* Jetpack - Contact From
  ----------------------------------------------------------------------------- */
 
  .wp-block-jetpack-contact-form {
