--- a/templates/single.html
+++ b/templates/single.html
@@ -1,115 +1,1 @@
-<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
-
-<!-- wp:group {"layout":{"contentSize":"720px","wideSize":"960px","type":"constrained"},"style":{"spacing":{"blockGap":"var:preset|spacing|x-large","margin":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|x-large"}}}} -->
-<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xx-large);margin-bottom:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
-<div class="wp-block-group"><!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"},"style":{"spacing":{"blockGap":"var:preset|spacing|small"},"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"x-small"} -->
-<div class="wp-block-group has-x-small-font-size" style="font-style:normal;font-weight:500"><!-- wp:post-terms {"term":"category","style":{"typography":{"fontWeight":"500","textTransform":"uppercase","lineHeight":"1"}}} /-->
-
-<!-- wp:paragraph {"textColor":"neutral-300","fontSize":"tiny"} -->
-<p class="has-neutral-300-color has-text-color has-tiny-font-size">|</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:post-date {"format":"F j, Y","displayType":"modified","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"primary-light","className":"no-flex-shrink"} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:post-title {"level":1} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:post-featured-image {"align":"wide"} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
-<main class="wp-block-group" style="margin-top:0;margin-bottom:0"><!-- wp:post-content {"layout":{"type":"constrained","contentSize":"720px","wideSize":"960px"}} /--></main>
-<!-- /wp:group -->
-
-<!-- wp:group {"layout":{"type":"constrained"},"style":{"spacing":{"margin":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|x-large"}}}} -->
-<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xx-large);margin-bottom:var(--wp--preset--spacing--x-large)"><!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
-<div class="wp-block-group"><!-- wp:post-terms {"term":"category","separator":"","className":"is-style-outline","fontSize":"x-small"} /-->
-
-<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"},"style":{"spacing":{"blockGap":"var:preset|spacing|x-small"}}} -->
-<div class="wp-block-group"><!-- wp:paragraph {"style":{"typography":{"fontStyle":"normal","fontWeight":"500","textTransform":"uppercase"},"spacing":{"margin":{"top":"2px"}}},"textColor":"primary-light","fontSize":"x-small","fontFamily":"primary"} -->
-<p class="has-primary-light-color has-text-color has-primary-font-family has-x-small-font-size" style="margin-top:2px;font-style:normal;font-weight:500;text-transform:uppercase">Share:</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:outermost/social-sharing {"iconColor":"primary","iconColorValue":"#0F172A","size":"has-small-icon-size","className":"is-style-logos-only","style":{"spacing":{"blockGap":"var:preset|spacing|x-small"}}} -->
-<ul class="wp-block-outermost-social-sharing has-small-icon-size has-icon-color is-style-logos-only"><!-- wp:outermost/social-sharing-link {"service":"facebook"} /-->
-
-<!-- wp:outermost/social-sharing-link {"service":"twitter"} /-->
-
-<!-- wp:outermost/social-sharing-link {"service":"linkedin"} /--></ul>
-<!-- /wp:outermost/social-sharing --></div>
-<!-- /wp:group --></div>
-<!-- /wp:group --></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"layout":{"inherit":true,"type":"constrained"},"style":{"spacing":{"margin":{"top":"var:preset|spacing|xxx-large"}}}} -->
-<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xxx-large)"><!-- wp:comments -->
-<div class="wp-block-comments"><!-- wp:comments-title {"textAlign":"left","showPostTitle":false,"showCommentsCount":false,"style":{"spacing":{"margin":{"top":"0","right":"0","bottom":"var:preset|spacing|large","left":"0"}}}} /-->
-
-<!-- wp:comment-template -->
-<!-- wp:columns {"style":{"spacing":{"blockGap":"var:preset|spacing|small","margin":{"top":"var:preset|spacing|large","bottom":"var:preset|spacing|large"}}}} -->
-<div class="wp-block-columns" style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"><!-- wp:column {"width":"40px","style":{"spacing":[]}} -->
-<div class="wp-block-column" style="flex-basis:40px"><!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /--></div>
-<!-- /wp:column -->
-
-<!-- wp:column {"style":{"spacing":{"padding":{"bottom":"var:preset|spacing|medium"}},"border":{"bottom":{"color":"var:preset|color|neutral-300","width":"1px"}}}} -->
-<div class="wp-block-column" style="border-bottom-color:var(--wp--preset--color--neutral-300);border-bottom-width:1px;padding-bottom:var(--wp--preset--spacing--medium)"><!-- wp:comment-author-name {"isLink":false,"style":{"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"medium","fontFamily":"primary"} /-->
-
-<!-- wp:group {"layout":{"type":"flex"},"style":{"spacing":{"blockGap":"var:preset|spacing|small","margin":{"top":"0","bottom":"0"}},"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"x-small"} -->
-<div class="wp-block-group has-x-small-font-size" style="margin-top:0;margin-bottom:0;font-style:normal;font-weight:500"><!-- wp:comment-date {"isLink":false,"style":{"typography":{"textTransform":"uppercase"}},"textColor":"primary-light","fontFamily":"primary"} /-->
-
-<!-- wp:comment-edit-link {"fontFamily":"primary"} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:comment-content {"fontSize":"small"} /-->
-
-<!-- wp:comment-reply-link {"style":{"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"small","fontFamily":"primary"} /--></div>
-<!-- /wp:column --></div>
-<!-- /wp:columns -->
-<!-- /wp:comment-template -->
-
-<!-- wp:spacer {"height":"2rem"} -->
-<div style="height:2rem" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
-
-<!-- wp:post-comments-form /--></div>
-<!-- /wp:comments --></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"align":"wide","style":{"spacing":{"margin":{"top":"var:preset|spacing|xxx-large","bottom":"var:preset|spacing|xxx-large"}}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--xxx-large);margin-bottom:var(--wp--preset--spacing--xxx-large)"><!-- wp:query {"queryId":7,"query":{"perPage":"3","pages":"1","offset":"0","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false,"taxQuery":null},"align":"wide","className":"is-style-2x-gap","layout":{"type":"default"}} -->
-<div class="wp-block-query alignwide is-style-2x-gap"><!-- wp:group {"align":"wide","style":{"spacing":{"margin":{"bottom":"var:preset|spacing|large"}}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
-<div class="wp-block-group alignwide" style="margin-bottom:var(--wp--preset--spacing--large)"><!-- wp:heading {"align":"wide"} -->
-<h2 class="wp-block-heading alignwide" id="h-latest-articles">Latest Articles</h2>
-<!-- /wp:heading -->
-
-<!-- wp:outermost/icon-block {"iconName":"wordpress-heading","iconColor":"secondary","iconColorValue":"#0B8082","className":"items-justified-undefined"} -->
-<div class="wp-block-outermost-icon-block items-justified-undefined"><div class="icon-container has-icon-color has-secondary-color" style="color:#0B8082;width:48px"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"><path d="M6 5V18.5911L12 13.8473L18 18.5911V5H6Z"></path></svg></div></div>
-<!-- /wp:outermost/icon-block --></div>
-<!-- /wp:group -->
-
-<!-- wp:post-template {"style":{"spacing":{"blockGap":"var:preset|spacing|x-large"}},"layout":{"type":"grid","columnCount":3}} -->
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}},"dimensions":{"minHeight":"100%"}},"backgroundColor":"white","className":"is-style-hover-box"} -->
-<div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="min-height:100%;padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
-<div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1","fontStyle":"normal"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
-
-<!-- wp:post-title {"isLink":true,"fontSize":"x-large"} /-->
-
-<!-- wp:post-excerpt {"moreText":"","showMoreOnNewLine":false,"fontSize":"small"} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:read-more {"content":"Continue Reading →","style":{"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"small"} /--></div>
-<!-- /wp:group -->
-<!-- /wp:post-template -->
-
-<!-- wp:query-no-results -->
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"3rem","right":"3rem","bottom":"3rem","left":"3rem"}}},"backgroundColor":"white","className":"box-shadow\u002d\u002dminimal"} -->
-<div class="wp-block-group box-shadow--minimal has-white-background-color has-background" style="padding-top:3rem;padding-right:3rem;padding-bottom:3rem;padding-left:3rem"><!-- wp:paragraph {"align":"center"} -->
-<p class="has-text-align-center">Well this doesn't look right! No posts could be found.</p>
-<!-- /wp:paragraph --></div>
-<!-- /wp:group -->
-<!-- /wp:query-no-results --></div>
-<!-- /wp:query --></div>
-<!-- /wp:group -->
-
-<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+<!-- wp:pattern {"slug":"nautilus/template-single"} /-->
