--- a/src/blocks/core/categories.scss
+++ b/src/blocks/core/categories.scss
@@ -56,14 +56,16 @@
         gap: var(--wp--preset--spacing--x-small);
 
         li {
+            background-color: var(--wp--preset--color--white);
             border: var(--wp--custom--border--default);
-            border-radius: var(--wp--custom--border-radius--default);
+            border-radius: var(--wp--custom--border-radius--button);
             cursor: pointer;
             display: inline-block;
             font-size: var(--wp--preset--font-size--x-small) !important;
-            font-weight: 400;
+            font-weight: normal;
             line-height: var(--wp--custom--typography--line-height--x-small);
             padding-right: 1.2em;
+            transition: box-shadow var(--wp--custom--transition--duration) ease-out;
 
             a {
                 color: var(--wp--preset--color--primary);
@@ -74,8 +76,11 @@
             }
 
             &:hover {
-                background-color: var(--wp--preset--color--neutral-100);
-                border-color: var(--wp--preset--color--neutral-300);
+                box-shadow: var(--wp--preset--shadow--x-small);
+
+                a {
+                    text-decoration: none;
+                }
             }
 
             .tag-link-count {
