--- a/src/blocks/core/list.scss
+++ b/src/blocks/core/list.scss
@@ -2,6 +2,8 @@
  ----------------------------------------------------------------------------- */
 
 .wp-block-list {
+    padding-inline-start: var(--wp--preset--spacing--medium);
+
     li {
         margin-bottom: 0.4rem;
         
