--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,1 @@
-<!-- wp:template-part {"slug":"header"} /-->
-
-<!-- wp:paragraph {"align":"center"} -->
-<p class="has-text-align-center">Homepage</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:template-part {"slug":"footer"} /-->
+<!-- wp:pattern {"slug":"nautilus/template-home"} /-->
