--- a/src/style.scss
+++ b/src/style.scss
@@ -236,7 +236,9 @@ a.has-arrow-left,
 	z-index: 10;
 }
 
-.has-no-border::before {
+.has-no-border::before,
+.has-no-border .wp-block-image-container::before,
+.has-no-border .components-resizable-box__container::before  {
 	border-color: transparent !important;
 }
 
