--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme Name:        Nautilus
 Theme URI:         https://github.com/ndiego/nautilus/
 Author:            Nick Diego
 Author URI:        https://www.nickdiego.com
-Description:       A WordPress block theme from 20,000 leagues under the sea.
+Description:       A WordPress block theme.
 Requires at least: 6.3
 Requires PHP:      5.6
 Version:           0.2.0
