Add Jetpack subscriptions mobile styles.

--- a/src/style.scss
+++ b/src/style.scss
@@ -318,6 +318,20 @@ a.has-arrow-left,
 	.wp-block-button__link {
 		border-radius: var(--wp--custom--border-radius--button) !important
 	}
+
+	@media ( max-width: 600px ) { 
+		.wp-block-jetpack-subscriptions__form-elements { 
+			flex-wrap: wrap; 
+
+			#subscribe-submit {
+				flex-basis: 100%;
+
+				.wp-block-button__link {
+					margin: 20px 0 0 !important;
+				}
+			}
+		}
+	}
 }
 
 /* Jetpack VideoPress */
